[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[node name="Main" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 593.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="MainVBoxContainer" type="VBoxContainer" parent="UI/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 566.0
margin_bottom = 566.0

[node name="SiteName" type="LineEdit" parent="UI/PanelContainer/MarginContainer/MainVBoxContainer"]
margin_right = 546.0
margin_bottom = 24.0
placeholder_text = "Site"

[node name="UserName" type="LineEdit" parent="UI/PanelContainer/MarginContainer/MainVBoxContainer"]
margin_top = 28.0
margin_right = 546.0
margin_bottom = 52.0
placeholder_text = "Login"

[node name="MasterPassword" type="LineEdit" parent="UI/PanelContainer/MarginContainer/MainVBoxContainer"]
margin_top = 56.0
margin_right = 546.0
margin_bottom = 80.0
secret = true
placeholder_text = "Master Password"

[node name="PasswordPanel" type="PanelContainer" parent="UI/PanelContainer/MarginContainer/MainVBoxContainer"]
margin_top = 84.0
margin_right = 546.0
margin_bottom = 118.0

[node name="PasswordHBox" type="HBoxContainer" parent="UI/PanelContainer/MarginContainer/MainVBoxContainer/PasswordPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 539.0
margin_bottom = 27.0

[node name="GenerateButton" type="Button" parent="UI/PanelContainer/MarginContainer/MainVBoxContainer/PasswordPanel/PasswordHBox"]
margin_right = 71.0
margin_bottom = 20.0
text = "Generate"

[node name="PasswordLabel" type="Label" parent="UI/PanelContainer/MarginContainer/MainVBoxContainer/PasswordPanel/PasswordHBox"]
visible = false
margin_left = 75.0
margin_top = 3.0
margin_right = 532.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "password"
[connection signal="pressed" from="UI/PanelContainer/MarginContainer/MainVBoxContainer/PasswordPanel/PasswordHBox/GenerateButton" to="UI" method="_on_GenerateButton_pressed"]
